Fixed minor layout issues

--- a/src/Contents/Styles.css
+++ b/src/Contents/Styles.css
@@ -251,6 +251,16 @@ h2 {
     margin-right: 1em;
 }
 
+.home-nav {
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.home-nav span > a {;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 2em;
+}
 
 .user-header {
     display: flex;
@@ -525,4 +535,13 @@ aside.content-section {
         z-index: 1;
         position: absolute;
     }
+}
+
+#contact-image {
+    aspect-ratio: 16 / 9;
+}
+
+.fphoto-cancha {
+    aspect-ratio: 16 / 9;
+    height: 15em;
 }
